--- a/src/app/routes/components/home/home.component.html
+++ b/src/app/routes/components/home/home.component.html
@@ -1,9 +1,9 @@
-<div fxLayout="column" class="wrapper" fxLayoutAlign="center center">
+<div fxLayout="column" class="wrapper" fxLayoutAlign="start center">
   <div fxFlex="25" fxLayoutAlign="center center">
     <img src="https://www.weather2umbrella.com/wp-content/themes/w2u/image/svg/weather-icons/d12.svg" alt="">
   </div>
 
-  <form fxLayout="column" fxFlex="75" fxLayoutGap="15px" fxLayoutAlign="center center" (submit)="onSubmit(cityName.value)">
+  <form fxLayout="column" fxFlex="75" fxLayoutGap="15px" fxLayoutAlign="start center" (submit)="onSubmit(cityName.value)">
     <label fxLayout="row" >Enter name of a city and press search:</label>
     <input #cityName (input)="changeInput($event)" name="cityName" type="text" placehoulder="City Name">
     <p [ngStyle]="{ 'color' : errorMsgColor , 'visibility' : errorMsgVissibility }">Please Enter Valid City Name</p>
